<resources>
    <string name="app_name">ITER</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_student">Student Clubs</string>
    <string name="title_activity_notice">Notice</string>
    <string name="title_activity_placement">Placement</string>
    <string name="str_btn_start">Start SlideShow</string>
    <string name="str_btn_stop">Stop SlideShow</string>
    <string name="placmnt1">Ever since its inception, the Placement Cell of ITER has created its impression by striking a right balance between academics and industry.It strongly believes in the adage,Nothing less than the industry best. Its constant endeavour in preparing its graduating engineers and MCA graduates in the field of technology has been an epitome of success over a period of time.</string>
    <string name="title_activity_newsnd_event">NewsndEvent</string>
    <string name="title_activity_facilities">Facilities</string>
    <string name="hostel">The Institution provides facilities for hostel accommodation for both boys and girls. The hostels are spacious, safe and secured with a cordial environment and surrounded by pleasant landscapes. A hygienic kitchen has been provided in each hostel with large dining halls. The rooms are well furnished. ITER has three in-campus girls hostels accommodating one thousand students. Both the hostels have round the clock Wi-Fi connectivity and medical facility. Similarly, ITER has six boys hostels accommodating one thousand students. Proper hygienic condition and strict supervision is maintained throughout.</string>
    <string name="transportation">ITER has its dedicated transport for the day scholars, covering entire Bhubaneswar. Route plans are chalked out keeping in mind the convenience of the students. The institute has deployed twelve medium sized buses so as to save time for students in commuting to and from the institute. PERSONALITY DEVELOPMENT and COMMUNICATION SKILLS The Institute makes all out efforts to bring-out the hidden talents of the students and nourish in them leadership qualities, excellent communication skills and a developed personality, so that they grow up as professionals of global standards to flourish in professional career.</string>
    <string name="yoga">Holding of regular yoga sessions and meditation practices are also a feature to encourage students for developing their individual talent and health. This is also aimed at building their positive attitude and providing them relief from feelings of burden and disappointment, if any.</string>
    <string name="multigym">The gym has latest equipments aided by trainers and physiotherapists for guided exercise for students and staff.</string>
    <string name="antiwomen">As made mandatory by law an anti women harassment cell is functioning in SOA University with a senior professor as Chairperson and other senior faculty members as members. The Cell is empowered to look into all forms of harassment against women and recommend appropriate sanctions.</string>
    <string name="antiragging">As per Honble Supreme Courts judgement the institute ensures a ragging free environment both inside the academic premises and hostels. An anti-ragging cells under the Chairmanship of Prof. (Dr.) B.K. Sarap functions for the prevention of ragging in all its forms. Further, the Cell has senior faculty members as members who counsel the students to be aware of Honble Supreme Courts judgement and how to abide by it.</string>
    <string name="title_activity_department">Department</string>
    <string name="title_activity_humanity">HUMANITY</string>
    <string name="title_activity_civil">CE</string>
    <string name="title_activity_cse">CSE</string>
    <string name="title_activity_csit">CSIT</string>
    <string name="title_activity_ee">EE</string>
    <string name="title_activity_eee">EEE</string>
    <string name="title_activity_ece">ECE</string>
    <string name="title_activity_eice">EICE</string>
    <string name="title_activity_eie">EIE</string>
    <string name="title_activity_mech">MECH</string>
    <string name="title_activity_c">CA</string>
    <string name="cse">Computers and networking have changed the way we looked at the world. The importance of Computer Science and Engineering would increase in coming days and remain indispensable to all other branches of knowledge, engineering, medical sciences and aerospace etc. The Department has been contributing critically to teaching learning process, research and collaborations. Computer Science and Engineering students are involved in the study of hardware infrastructure – computers, networks, embedded devices, as well as operating systems, compilers and networking software. The focus is on the understanding of cooperation between hardware and software to yield an optimal performance.The department aims at technical and professional competency in Computer Science and Engineering and also aids in inculcating moral and ethical values. The alacrity of the students to learn makes it easier for the department of Computer Science and Engineering to produce top-notch engineers who are being recruited by companies all over India. This branch now is the epicenter of all other branches and offers the sought after courses by the under graduate and post graduate programme. The department currently offers: B.Tech in Computer Science and Engineering Dual Degree in Engineering (B.Tech and M.Tech) Dual Degree in Management (B.Tech and MBA) M.Tech in Computer Science and Engineering M.Tech in Computer Science and Data Processing Ph.D. in Computer Science and Engineering. The B.Tech. programme offered by this branch has been accredited by the National Board of Accreditation (NBA), AICTE, Since its inception, the department has always been recognized all over for excellence in teaching and research. Graduates of the department entertain the best placement profile in the institute, with an equal preference from industry as well as academic. All over the world, exstudents of the Department occupy top positions in both academic and industry. The institute has tie up with several industries like Infosys, TCS and Hexaware and others to help the students to becomeindustry ready. Department promotes and harnesses the research initiatives by its faculty members as well as the researchers in various domains of Computer Science and Engineering like Ad hoc Networks, Artificial Intelligence, Soft Computing and Machine Learning, Data mining, Bioinformatics, Computer Networking, Computational Finance and Cloud Computing etc.</string>
    <string name="civil">Colossal innovations in micro and macro structural designs and the introduction of new materials have revolutionized the oldest branch of engineering i.e. Civil Engineering. The expanse of Civil Engineering today, assimilates other branches of engineering and specialized areas due to the sophistication of designs and construction. The Department of Civil Engineering reflects the contemporary trends in the offered programmes : B.Tech in Civil Engineering Dual Degree in Civil Engineering Dual Degree in Civil Engineering and Management M.Tech. in Structural Engineering M.Tech. in Geotechnical Engineering Ph.D. Programme in Civil Engineering To facilitate the teaching learning process experienced faculty members with required qualification and consistent research activities, create an open and innovative ambience for the students. The focus is on students’ understanding of theoretical concepts and frameworks and intensive application training in laboratories. This is further supplemented by taking the students for industrial exposure and field study. The following laboratories have been set up for training, research and development with environmental safeguards : Geo-Technical Engineering Laboratory Transportation Engineering Laboratory Concrete Laboratory Environmental Engineering Research Laboratory Surveying Laboratory Computational Laboratory Structural Engineering Laboratory Fluid Mechanics Laboratory Water Resource Engineering Laboratory Advanced Research Laboratory Hydro-Meteorological Laboratory</string>
    <string name="ca">"The Department recognizes teaching as a holistic activity and development of human resources for the service of the nation. Computer Application is a pre-condition to build integrity, creativity and freedom of academic experiment for new technology and dissemination of research findings. The motivating environment enlivens the spirits of students and the efficacy of faculty strengthens the quest for quality education. The Department is also engaged in advanced research having an enrolment of M.Tech and Ph.D. candidates. FEATURES A well-furnished and well-equipped library updated every year with new books. The Department has laboratories with adequate number of computers and centrally connected to the Institute's server carry out programmes and projects of the curriculum and innovative experiments in different environments like Windows 7, Red Hat Linux and Ubuntu10 along with research tools like Latex, NS2, MatLab are present. A smart seminar hall with DLP and interactive audio system. Highly efficient and dynamic training and placement cell, imparting personality development and personnel management skill."</string>
    <string name="csit">Computer Science and Information Technology introduced the data, information and knowledge to the internet superhighways, making this world a global village. Humanity is inevitably dependent on it. As a branch of engineering, its relevance will continue to grow in future. This Department offers M.Tech programme in Computer Science and Informatics. It is well equipped with adequate laboratory infrastructure and necessary staff strength. The Department emphasizes on interactive teaching and research and thus caters to the computational needs of students and faculty members. The Department has lab facility to train the students in different specialized areas such as Web Technology, Advance Java Platform, Networking, Multimedia and popular programming languages. The labs are connected to the networking environment with state-of-theart servers with emphasis on software engineering, software to make the students industry adaptable. Software application packages like Visual Studio, ORACLE 11g, SQL SERVER, LINUX, MATLAB-7 and programming suites like C, C++ and JAVA are made available to all students and staff. The laboratories have high-end servers, including Linux/Unix and Windows platforms. Each lab session in all the semesters has been meticulously designed in the form of assignments, which are to be completed within stipulated time. Appropriate lab procedures are followed to get the right kind of hands-on-experience and expertise in the above said software. The Department also offers special training to the students in .NET, Core JAVA, Advance Java and various internet tools. This helps them in preparing good projects in the areas of Mining, Tourism, Air Ticket Reservation, Web Based Network Programming and Security Marketing Application, Healthcare System and Online Examination, Adhoc Networks etc. The Institute has tie-up with several Industries like Infosys, TCS, Hexaware and others to help the students to be industry ready. The Department also offers industrial electives as a part of the course curriculum in which recent advancement in IT is being imparted. Programmes Offered B.Tech in Computer Science and Engineering (4 years) M.Tech. in Computer Science and Engineering (2 years) M.Tech in Computer Science and Data Processing (2 years) Dual Degree in Engineering (B.Tech. and M.Tech.) Dual Degree in Management (B.Tech. and MBA) Ph.D.</string>
</resources>